--- a/windspire_backend/Cargo.toml
+++ b/windspire_backend/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = "0.7.7"
+dotenvy = "0.15.7"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
+sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"] }
+tokio = { version = "1.40.0", features = ["full"] }
