refactor: windspire_backend: Broken up code into modules - Implemented content type for response - Using the InfoResponse trait Also: - Added workspace recommendations for VSCode

--- a/windspire_backend/Cargo.toml
+++ b/windspire_backend/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.89"
 axum = "0.7.7"
 dotenvy = "0.15.7"
 serde = { version = "1.0.210", features = ["derive"] }
