--- a/windspire_backend/Cargo.toml
+++ b/windspire_backend/Cargo.toml
@@ -11,3 +11,5 @@ serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"] }
 tokio = { version = "1.40.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
