--- a/windspire_backend/Cargo.toml
+++ b/windspire_backend/Cargo.toml
@@ -9,7 +9,8 @@ axum = "0.7.7"
 dotenvy = "0.15.7"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"] }
+sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "uuid"] }
 tokio = { version = "1.40.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+uuid = { version = "1.10.0", features = ["v4", "serde"] }
