--- a/windspire_backend/Cargo.toml
+++ b/windspire_backend/Cargo.toml
@@ -1,16 +1,23 @@
 [package]
 name = "windspire_backend"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-anyhow = "1.0.89"
-axum = "0.7.7"
+anyhow = "1.0.97"
+async-trait = "0.1.88"
+axum = "0.8.3"
 dotenvy = "0.15.7"
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
-sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "uuid"] }
-tokio = { version = "1.40.0", features = ["full"] }
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
-uuid = { version = "1.10.0", features = ["v4", "serde"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+sqlx = { version = "0.8.3", features = [
+    "postgres",
+    "runtime-tokio",
+    "tls-native-tls",
+    "macros",
+    "uuid",
+] }
+tokio = { version = "1.44.2", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+uuid = { version = "1.16.0", features = ["v4", "serde"] }
