--- a/windspire_backend/Cargo.toml
+++ b/windspire_backend/Cargo.toml
@@ -21,3 +21,4 @@ tokio = { version = "1.44.2", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 uuid = { version = "1.16.0", features = ["v4", "v7", "serde"] }
+validator = { version = "0.20.0", features = ["derive"] }
