--- a/windspire_backend/Cargo.toml
+++ b/windspire_backend/Cargo.toml
@@ -22,3 +22,5 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 uuid = { version = "1.16.0", features = ["v4", "v7", "serde"] }
 validator = { version = "0.20.0", features = ["derive"] }
+once_cell = "1.21.3"
+regex = "1.11.1"
