chore: All the code generated by Roo Code and OpenRouter using Anthropic Claude Sonnet 4

--- a/windspire_backend/.env
+++ b/windspire_backend/.env
@@ -1,2 +1,15 @@
 DATABASE_URL=postgres://windspire:windspire@localhost/windspire
 SERVER_ADDRESS=0.0.0.0:8080
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:8080/auth/callback
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRATION_HOURS=24
+JWT_ISSUER=windspire
+
+# CORS Configuration
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
