--- a/windspire_backend/Cargo.toml
+++ b/windspire_backend/Cargo.toml
@@ -2,15 +2,16 @@
 name = "windspire_backend"
 version = "0.1.0"
 edition = "2024"
+default-run = "windspire_backend"
 
 [dependencies]
 anyhow = "1.0.98"
 async-trait = "0.1.88"
-axum = "0.8.3"
+axum = "0.8.4"
 dotenvy = "0.15.7"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-sqlx = { version = "0.8.5", features = [
+sqlx = { version = "0.8.6", features = [
     "postgres",
     "runtime-tokio",
     "tls-native-tls",
@@ -18,17 +19,17 @@ sqlx = { version = "0.8.5", features = [
     "uuid",
     "chrono",
 ] }
-tokio = { version = "1.44.2", features = ["full"] }
+tokio = { version = "1.46.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-uuid = { version = "1.16.0", features = ["v4", "v7", "serde"] }
+uuid = { version = "1.17.0", features = ["v4", "v7", "serde"] }
 validator = { version = "0.20.0", features = ["derive"] }
 once_cell = "1.21.3"
 regex = "1.11.1"
 # Authentication and authorization dependencies
 oauth2 = "4.4.2"
 jsonwebtoken = "9.3.0"
-reqwest = { version = "0.12.9", features = ["json"] }
+reqwest = { version = "0.12.22", features = ["json"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 chrono = { version = "0.4.39", features = ["serde"] }
 base64 = "0.22.1"
