chore: Refactored BE to run as custom handler function in Azure static web app

--- a/windspire_backend/.env.example
+++ b/windspire_backend/.env.example
@@ -2,6 +2,7 @@
 DATABASE_URL=postgres://username:password@localhost/windspire
 
 # Server Configuration
+# Port 8080 is used for both cargo run and func start (Azure Functions)
 SERVER_ADDRESS=0.0.0.0:8080
 
 # Firebase Configuration
@@ -13,4 +14,6 @@ JWT_EXPIRATION_HOURS=24
 JWT_ISSUER=windspire
 
 # CORS Configuration
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+# Comma-separated list of allowed origins for CORS
+# Include local development and production domains
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,https://your-app-name.azurestaticapps.net
