--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
     "editor.formatOnSave": true,
     "rust-analyzer.linkedProjects": [
         "windspire_backend/Cargo.toml"
-    ]
+    ],
+    "rust-analyzer.server.extraEnv": {
+        "DATABASE_URL": "postgres://windspire:windspire@localhost/windspire"
+    },
+    "rust-analyzer.cargo.buildScripts.enable": true,
+    "rust-analyzer.procMacro.enable": true
 }
