--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -13,8 +13,9 @@ on:
       - 'windspire_backend/**'
       - '.github/workflows/backend-ci-cd.yml'
     tags:
-      - 'test*'
-      - 'release*'
+      - 'dev*'
+      - 'staging*'
+      - 'prod*'
   pull_request:
     branches: [ main ]
     paths:
@@ -132,7 +133,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy Backend
     environment: 
-      name: ${{ startsWith(github.ref, 'refs/tags/release') && 'production' || 'staging' }}
+      name: ${{ startsWith(github.ref, 'refs/tags/prod') && 'production' || startsWith(github.ref, 'refs/tags/staging') && 'staging' || 'development' }}
     steps:
       - uses: actions/checkout@v4
 
