build: Ran npx prettier . --write build: Changed install for the Azure CLI

--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -191,7 +191,8 @@ jobs:
 
       # Install Azure CLI for Bicep compilation
       - name: Install Azure CLI
-        uses: azure/setup-cli@v2
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
       # Validate Bicep template syntax and compilation
       - name: Compile Bicep templates
