--- a/windspire_frontend_svelte_csr/staticwebapp.config.json
+++ b/windspire_frontend_svelte_csr/staticwebapp.config.json
@@ -1,25 +1,23 @@
 {
-    "routes": [
-        {
-            "route": "/api/*",
-            "allowedRoles": [
-                "anonymous"
-            ]
-        },
-        {
-            "route": "/*",
-            "serve": "/index.html",
-            "statusCode": 200
-        }
-    ],
-    "navigationFallback": {
-        "rewrite": "/index.html",
-        "exclude": [
-            "/api/*",
-            "/*.{css,scss,sass,js,ts,tsx,jsx,json,png,gif,jpg,jpeg,svg,ico,webp,woff,woff2,eot,otf,ttf}"
-        ]
-    },
-    "mimeTypes": {
-        ".json": "application/json"
-    }
+	"routes": [
+		{
+			"route": "/api/*",
+			"allowedRoles": ["anonymous"]
+		},
+		{
+			"route": "/*",
+			"serve": "/index.html",
+			"statusCode": 200
+		}
+	],
+	"navigationFallback": {
+		"rewrite": "/index.html",
+		"exclude": [
+			"/api/*",
+			"/*.{css,scss,sass,js,ts,tsx,jsx,json,png,gif,jpg,jpeg,svg,ico,webp,woff,woff2,eot,otf,ttf}"
+		]
+	},
+	"mimeTypes": {
+		".json": "application/json"
+	}
 }
