--- a/.github/workflows/database-migrations.yml
+++ b/.github/workflows/database-migrations.yml
@@ -66,7 +66,10 @@ jobs:
         key: ${{ runner.os }}-cargo-${{ hashFiles('windspire_backend/**/Cargo.lock') }}
 
     - name: Install SQLx CLI
-      run: cargo install sqlx-cli --no-default-features --features rustls,postgres
+      uses: baptiste0928/cargo-install@v2
+      with:
+        crate: sqlx-cli
+        features: rustls,postgres
 
     - name: Validate migrations syntax
       run: |
@@ -117,7 +120,10 @@ jobs:
       uses: dtolnay/rust-toolchain@stable
 
     - name: Install SQLx CLI
-      run: cargo install sqlx-cli --no-default-features --features rustls,postgres
+      uses: baptiste0928/cargo-install@v2
+      with:
+        crate: sqlx-cli
+        features: rustls,postgres
 
     - name: Get current migration status
       id: migration_status
