--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -176,11 +176,39 @@ jobs:
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/windspire_test
 
-      # Run security audit (fast with dedicated action)
+      # Run security audit (precompiled binary - fastest)
+      - name: Install cargo-audit (precompiled)
+        run: |
+          # Get the latest version from GitHub API
+          AUDIT_VERSION=$(curl -s https://api.github.com/repos/RustSec/rustsec/releases/tags/cargo-audit | jq -r '.tag_name' | sed 's/^cargo-audit\/v//')
+          echo "Latest cargo-audit version: $AUDIT_VERSION"
+          
+          ARCH=$(uname -m)
+          OS=$(uname -s | tr '[:upper:]' '[:lower:]')
+          
+          # Map architecture names to Rust target names
+          case $ARCH in
+            x86_64) RUST_ARCH="x86_64" ;;
+            aarch64|arm64) RUST_ARCH="aarch64" ;;
+            *) echo "Unsupported architecture: $ARCH"; exit 1 ;;
+          esac
+          
+          # Map OS names to Rust target names  
+          case $OS in
+            linux) RUST_OS="unknown-linux-gnu" ;;
+            darwin) RUST_OS="apple-darwin" ;;
+            *) echo "Unsupported OS: $OS"; exit 1 ;;
+          esac
+          
+          TARGET="${RUST_ARCH}-${RUST_OS}"
+          echo "Downloading cargo-audit for target: $TARGET"
+          
+          curl -sSL "https://github.com/RustSec/rustsec/releases/download/cargo-audit/v${AUDIT_VERSION}/cargo-audit-${TARGET}.tar.gz" | tar xzf - -C ~/.cargo/bin
+      
       - name: Security audit
-        uses: rustsec/audit-check@v1.4.1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cd windspire_backend
+          cargo audit
         continue-on-error: false
 
   # Infrastructure validation (if infrastructure files changed)
