build: Trying to fix failing precompiled cargo audit

--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -179,9 +179,15 @@ jobs:
       # Run security audit (precompiled binary - fastest)
       - name: Install cargo-audit (precompiled)
         run: |
-          # Get the latest version from GitHub API
-          AUDIT_VERSION=$(curl -s https://api.github.com/repos/RustSec/rustsec/releases/tags/cargo-audit | jq -r '.tag_name' | sed 's/^cargo-audit\/v//')
+          # Get the latest version from GitHub API (releases/latest endpoint)
+          AUDIT_VERSION=$(curl -s https://api.github.com/repos/RustSec/rustsec/releases/latest | jq -r '.tag_name' | sed 's/^cargo-audit\/v//')
           echo "Latest cargo-audit version: $AUDIT_VERSION"
+          
+          # Fallback to a known working version if API fails
+          if [ "$AUDIT_VERSION" = "null" ] || [ -z "$AUDIT_VERSION" ]; then
+            AUDIT_VERSION="0.18.3"
+            echo "API failed, using fallback version: $AUDIT_VERSION"
+          fi
           
           ARCH=$(uname -m)
           OS=$(uname -s | tr '[:upper:]' '[:lower:]')
