build: Fix Rust compilation issues for deployment
- Add musl-tools and musl-dev packages for cross-compilation
- Fix ring crate compilation error in GitHub Actions
- Improve frontend workflow dependency verification
- Add skip_deploy_on_missing_secrets for graceful deployment handling

This resolves the 'ToolNotFound: x86_64-linux-musl-gcc' error that was
preventing successful backend builds in the deployment pipeline.

--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -60,6 +60,12 @@ jobs:
         with:
           targets: x86_64-unknown-linux-musl
 
+      # Install musl development tools for cross-compilation
+      - name: Install musl tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y musl-tools musl-dev
+
       # Cache dependencies for faster builds
       - name: Cache dependencies
         uses: actions/cache@v4
