--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Install musl tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y musl-tools musl-dev
+          sudo apt-get install -y musl-tools musl-dev pkg-config libssl-dev
 
       # Cache dependencies for faster builds
       - name: Cache dependencies
