--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -112,13 +112,13 @@ jobs:
         id: deploy
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN || 'placeholder' }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
           app_location: "windspire_frontend_svelte_csr/dist"
           skip_app_build: true  # We already built the app
           skip_api_build: true  # Backend is deployed separately
-          skip_deploy_on_missing_secrets: true  # Allow workflow to continue without deployment token
+        continue-on-error: true  # Don't fail the workflow if deployment token is missing
 
       # Output deployment results
       - name: Output deployment results
