--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,12 +70,12 @@ jobs:
       AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}    
+      AZURE_RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
     with:
       environment: ${{ needs.determine_environment.outputs.env_name }}
       container-app-name: ${{ needs.infrastructure.outputs.container-app-name }}
       registry-name: ${{ needs.infrastructure.outputs.registry-name }}
       registry-login-server: ${{ needs.infrastructure.outputs.registry-login-server }}
-      resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
 
   # Step 3: Deploy frontend (parallel with backend after infrastructure)
   frontend:
